--- a/css/style.css
+++ b/css/style.css
@@ -2914,8 +2914,8 @@ a.slim:hover {
 }
 
 .cars-lists img {
-  width: 210px;
-  height: 250px;
+  width: 100%;
+  height: 320px;
   object-fit: fill !important;
 }
 
